{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 71,
  "lineage": "c0157d61-df68-0ea0-77d3-9a5d1010201b",
  "resources": [
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05da9b8423d030c19",
            "id": "r-rtb-072c65e945c93a8941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-072c65e945c93a894",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05da9b8423d030c19",
            "id": "r-rtb-02f08e348b9611f361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02f08e348b9611f36",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049993264:route-table/rtb-072c65e945c93a894",
            "id": "rtb-072c65e945c93a894",
            "owner_id": "975049993264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05da9b8423d030c19",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Creator": "pingabisec@gmail.com",
              "Name": "WAZUF-private-route-table-private-route-table",
              "Project": "WAZUF"
            },
            "tags_all": {
              "Creator": "pingabisec@gmail.com",
              "Name": "WAZUF-private-route-table-private-route-table",
              "Project": "WAZUF"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b90dedcda48cf57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049993264:route-table/rtb-02f08e348b9611f36",
            "id": "rtb-02f08e348b9611f36",
            "owner_id": "975049993264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05da9b8423d030c19",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Creator": "pingabisec@gmail.com",
              "Environment": "staging",
              "Name": "WAZUF-public-route-table-public-route-table",
              "Project": "WAZUF"
            },
            "tags_all": {
              "Creator": "pingabisec@gmail.com",
              "Environment": "staging",
              "Name": "WAZUF-public-route-table-public-route-table",
              "Project": "WAZUF"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b90dedcda48cf57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09025cfbf19a02752",
            "route_table_id": "rtb-072c65e945c93a894",
            "subnet_id": "subnet-0e73d36e8c9b92dd0"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0052e80bdefa648bd",
            "route_table_id": "rtb-072c65e945c93a894",
            "subnet_id": "subnet-0d0855e37540598cc"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8080b39b0f4e6d7",
            "route_table_id": "rtb-02f08e348b9611f36",
            "subnet_id": "subnet-0282ae3a69bdd810a"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09387e2fbd8f06ce6",
            "route_table_id": "rtb-02f08e348b9611f36",
            "subnet_id": "subnet-02061d2aa5a9ee05d"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049993264:subnet/subnet-0e73d36e8c9b92dd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.17.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e73d36e8c9b92dd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049993264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "pingabisec@gmail.com",
              "Environment": "staging",
              "Name": "WAZUF-private-private-subnet-1",
              "Project": "WAZUF"
            },
            "tags_all": {
              "Creator": "pingabisec@gmail.com",
              "Environment": "staging",
              "Name": "WAZUF-private-private-subnet-1",
              "Project": "WAZUF"
            },
            "vpc_id": "vpc-05b90dedcda48cf57"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049993264:subnet/subnet-0d0855e37540598cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.17.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0855e37540598cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049993264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "pingabisec@gmail.com",
              "Environment": "staging",
              "Name": "WAZUF-private-private-subnet-2",
              "Project": "WAZUF"
            },
            "tags_all": {
              "Creator": "pingabisec@gmail.com",
              "Environment": "staging",
              "Name": "WAZUF-private-private-subnet-2",
              "Project": "WAZUF"
            },
            "vpc_id": "vpc-05b90dedcda48cf57"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049993264:subnet/subnet-0282ae3a69bdd810a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.17.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0282ae3a69bdd810a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049993264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "pingabisec@gmail.com",
              "Environment": "staging",
              "Name": "WAZUF-public-public-subnet-1",
              "Project": "WAZUF"
            },
            "tags_all": {
              "Creator": "pingabisec@gmail.com",
              "Environment": "staging",
              "Name": "WAZUF-public-public-subnet-1",
              "Project": "WAZUF"
            },
            "vpc_id": "vpc-05b90dedcda48cf57"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049993264:subnet/subnet-02061d2aa5a9ee05d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.17.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02061d2aa5a9ee05d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049993264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "pingabisec@gmail.com",
              "Environment": "staging",
              "Name": "WAZUF-public-public-subnet-2",
              "Project": "WAZUF"
            },
            "tags_all": {
              "Creator": "pingabisec@gmail.com",
              "Environment": "staging",
              "Name": "WAZUF-public-public-subnet-2",
              "Project": "WAZUF"
            },
            "vpc_id": "vpc-05b90dedcda48cf57"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049993264:internet-gateway/igw-05da9b8423d030c19",
            "id": "igw-05da9b8423d030c19",
            "owner_id": "975049993264",
            "tags": {
              "Creator": "pingabisec@gmail.com",
              "Environment": "staging",
              "Name": "WAZUF-internet-gateway",
              "Project": "WAZUF"
            },
            "tags_all": {
              "Creator": "pingabisec@gmail.com",
              "Environment": "staging",
              "Name": "WAZUF-internet-gateway",
              "Project": "WAZUF"
            },
            "vpc_id": "vpc-05b90dedcda48cf57"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049993264:vpc/vpc-05b90dedcda48cf57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0d35511564e00a2f8",
            "default_route_table_id": "rtb-0083032856d5c4363",
            "default_security_group_id": "sg-08fb6cbb0e1be13c2",
            "dhcp_options_id": "dopt-0254a28fd81318ba5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05b90dedcda48cf57",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0083032856d5c4363",
            "owner_id": "975049993264",
            "tags": {
              "Creator": "pingabisec@gmail.com",
              "Name": "WAZUF-terraform-VPC",
              "Project": "WAZUF",
              "env": "staging"
            },
            "tags_all": {
              "Creator": "pingabisec@gmail.com",
              "Name": "WAZUF-terraform-VPC",
              "Project": "WAZUF",
              "env": "staging"
            }
          }
        }
      ]
    },
    {
      "module": "module.wazuh_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049993264:security-group/sg-0d40a737196a00c6b",
            "description": "Allowing from outside",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow-all-egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d40a737196a00c6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow-port-22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow-port-443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow-port-80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-web-default-sg",
            "name_prefix": "",
            "owner_id": "975049993264",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "pingabisec@gmail.com",
              "Environment": "stagging",
              "Name": "terraform-web-default-sg",
              "Project": "WAZUF"
            },
            "tags_all": {
              "Creator": "pingabisec@gmail.com",
              "Environment": "stagging",
              "Name": "terraform-web-default-sg",
              "Project": "WAZUF"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b90dedcda48cf57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}